kube-manifest/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp 
spec:
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      name: vproapp
      labels:
        app: vproapp
    spec:
      containers:
        - name: vproapp
          image: markmama/devops:vproapp
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1 
kind: Service
metadata:
  name: vproapp
spec:
  selector:
    app: vproapp
  ports:
    - port: 8080
      targetPort: 8080
