kube-manifest/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb 
spec:
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      name: vprodb
      labels:
        app: vprodb
    spec:
      containers:
        - name: vprodb
          image: 9952268641/devops:vprodb
          ports:
            - containerPort: 3306
---
apiVersion: v1 
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
