kube-manifest/memcached.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprocache01
  labels:
    app: vprocache01 
spec:
  selector:
    matchLabels:
      app: vprocache01
  template:
    metadata:
      name: vprocache01
      labels:
        app: vprocache01
    spec:
      containers:
        - name: vprocache01
          image: memcached
          ports:
             - containerPort: 11211
---
apiVersion: v1 
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vprocache01
  ports:
    - port: 11211
      targetPort: 11211
