kube-manifest/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromq01
  labels:
    app: vpromq01 
spec:
  selector:
    matchLabels:
      app: vpromq01
  template:
    metadata:
      name: vpromq01
      labels:
        app: vpromq01
    spec:
      containers:
        - name: vpromq01
          image: rabbitmq
          ports:
            - containerPort: 15672
---
apiVersion: v1 
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vpromq01
  ports:
    - port: 15672
      targetPort: 15672
