kube-manifest/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vprofile
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: vproweb
           port:
             number: 80
